# python-filestate-git

./: CLAUDE.md  README.md  pyproject.toml  requirements.in  requirements.txt  setup.py
.wex/: .gitignore  config.yml
.wex/knowledge/readme/: introduction.md
.wex/knowledge/roadmap/todo/: option-git-branches-option-reparses-config-per-remote.md
.wex/python/: .last-commit
.wex/python/app_manager/: requirements.txt
src/wexample_filestate_git/config_option/: git_config_option.py  main_branch_config_option.py  remote_config_option.py  remote_item_config_option.py  type_config_option.py  url_config_option.py
src/wexample_filestate_git/config_value/: branch_design_config_value.py  git_config_value.py  remote_config_value.py
src/wexample_filestate_git/operation/: abstract_git_operation.py  git_create_branch_operation.py  git_delete_remote_branch_operation.py  git_init_operation.py  git_merge_branch_operation.py  git_remote_add_operation.py  git_remote_create_operation.py  git_rename_branch_operation.py  git_sync_ci_variables_operation.py
src/wexample_filestate_git/operations_provider/: git_operations_provider.py
src/wexample_filestate_git/option/: git_option.py
src/wexample_filestate_git/option/_git/: branches_option.py  ci_variables_option.py  create_remote_option.py  main_branch_option.py  name_option.py  remote_item_option.py  remote_option.py  type_option.py  url_option.py
src/wexample_filestate_git/options_provider/: git_config_options_provider.py  git_options_provider.py  remote_item_options_provider.py
src/wexample_filestate_git/remote/: abstract_remote.py  github_remote.py  gitlab_remote.py
src/wexample_filestate_git/remote/mixin/: with_git_remote_mixin.py
src/wexample_filestate_git/test/mixin/: test_git_state_manager_mixin.py
src/wexample_filestate_git/testing/: abstract_git_option_test.py  abstract_git_remote_test.py  abstract_git_test_option.py  abstract_main_branch_test.py  git_remote_test.py
tests/: test_git_file_state_manager.py
tests/common/: abstract_git_option_test.py  abstract_git_test_option.py  abstract_main_branch_test.py
tests/integration/remote/: test_github_remote.py  test_gitlab_remote.py
tests/operation/: test_git_operation.py  test_git_remote_add_operation.py  test_git_remote_create_operation.py
tests/package/option/: test_git_option.py  test_main_branch_option.py  test_remote_add_option.py  test_remote_option.py
tests/package/option/_git/: test_git_option_bool_true.py  test_git_option_dict.py  test_git_option_existing_directory.py
tests/package/option/_git/main_branch/: test_main_branch_option_default.py  test_main_branch_option_list.py  test_main_branch_option_string.py
tests/package/option/_git/remote/: test_remote_option_add_simple.py
tests/package/option/git/: test_git_option_bool_true.py
tests/package/option/git_option/: test_git_option_existing_directory.py
tests/remote/: test_github_remote.py  test_gitlab_remote.py
wexample_filestate_git/config_option/: create_remote_config_option.py  git_config_option.py  remote_config_option.py  remote_item_config_option.py  type_config_option.py  url_config_option.py
wexample_filestate_git/operation/: abstract_git_operation.py  git_init_operation.py  git_remote_add_operation.py  git_remote_create_operation.py  git_remote_operation.py
wexample_filestate_git/operations_provider/: git_operations_provider.py
wexample_filestate_git/option/: git_option.py
wexample_filestate_git/options_provider/: git_config_options_provider.py  git_options_provider.py  remote_item_options_provider.py
wexample_filestate_git/remote/: abstract_remote.py  github_remote.py  gitlab_remote.py
wexample_filestate_git/test/mixin/: test_git_state_manager_mixin.py
wexample_filestate_git/testing/: git_remote_test.py
