[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "wexample-filestate-git"
version = "0.0.37"
description = "An extension for \"filestate\" package, which adds GIT management operations."
authors = [
    { name = "weeger", email = "contact@wexample.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2,<3",
    "requests",
    "wexample-filestate==0.0.49",
    "wexample-helpers-api==0.0.30",
    "wexample-helpers-git==0.0.48",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
homepage = "https://github.com/wexample/python-filestate-git"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = [
    "src/wexample_filestate_git/py.typed",
]
package-dir = "src"

[[tool.pdm.build.packages]]
include = "wexample_filestate_git"
from = "src"
